--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Panel Sondas T</title>
 
+<!-- Chart.js -->
 <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
 
 <style>
-  /* --- tus estilos originales --- */
-  :root{ --bg:#0f1720; --card:#0f1725; --text:#e6eef6; --muted:#9aa9bd; --accent:#00c8ff; --danger:#ff3b3b; --shadow:0 8px 20px rgba(2,8,23,0.6); }
-  body.light{ --bg:#f3f6fb; --card:#ffffff; --text:#1b2330; --muted:#556575; --accent:#007BFF; --danger:#ff3b3b; --shadow:0 6px 18px rgba(16,24,40,0.08); }
-  html,body{margin:0;padding:0;font-family:Inter,system-ui,Arial,sans-serif;background:var(--bg);color:var(--text);-webkit-font-smoothing:antialiased;height:100%;}
+  :root{ --bg:#0f1720; --card:#0f1725; --text:#e6eef6; --muted:#9aa9bd; --accent:#00c8ff; --danger:#ff3b3b; --shadow:0 8px 20px rgba(2,8,23,0.6);}
+  body.light{ --bg:#f3f6fb; --card:#ffffff; --text:#1b2330; --muted:#556575; --accent:#007BFF; --danger:#ff3b3b; --shadow:0 6px 18px rgba(16,24,40,0.08);}
+  html,body{margin:0;padding:0;font-family:Inter,system-ui,Arial,sans-serif;background:var(--bg);color:var(--text);height:100%;}
   .app{max-width:1200px;margin:18px auto;padding:14px;}
   .header{display:flex;gap:12px;align-items:center;justify-content:space-between;margin-bottom:16px;}
   .title h1{margin:0;font-size:20px;} .title p{margin:0;color:var(--muted);font-size:13px;}
@@ -21,7 +21,7 @@
   .metric{background:var(--card);padding:12px 14px;border-radius:10px;box-shadow:var(--shadow);min-width:140px;text-align:center;}
   .metric small{display:block;color:var(--muted);font-size:12px;} .metric b{display:block;font-size:18px;margin-top:6px;}
   .grid{display:grid;grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));gap:16px;}
-  .card{background:var(--card);border-radius:12px;padding:14px;box-shadow:var(--shadow);position:relative;transition: box-shadow .25s ease, transform .18s ease, border-color .15s ease;border: 2px solid transparent;overflow:hidden;}
+  .card{background:var(--card);border-radius:12px;padding:14px;box-shadow:var(--shadow);position:relative;overflow:hidden;border:2px solid transparent;}
   .card.alert{border-color: var(--danger); box-shadow:0 12px 30px rgba(255,50,50,0.12);}
   .card .sonda-title{ font-weight:600; font-size:15px; margin-bottom:8px; }
   .tog{ font-size:13px; color:var(--muted); display:flex; gap:8px; align-items:center; margin-bottom:8px; }
@@ -37,11 +37,6 @@
   .modal{ display:none; position:fixed; top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,.5);align-items:center;justify-content:center;z-index:1200; }
   .modal.open{ display:flex; }
   .modal-content{ background:var(--card); color:var(--text); width:96%; max-width:1100px; padding:14px; border-radius:10px; overflow-y:auto; max-height:90vh; box-shadow:var(--shadow); }
-  #historyContent{ display:grid; grid-template-columns: repeat(auto-fill,minmax(260px,1fr)); gap:12px; margin-top:8px; }
-  .historyCard{ background: linear-gradient(180deg, rgba(255,255,255,0.02), transparent); padding:10px; border-radius:8px; box-shadow: 0 6px 18px rgba(2,8,23,0.35); font-size:13px; overflow:auto; max-height:52vh; }
-  .historyCard h3{ margin:0 0 6px 0; font-size:15px; }
-  .histRow{ border-top:1px dashed rgba(255,255,255,0.03); padding:6px 0; font-size:13px; color:var(--muted); }
-  .histRow small{ display:block; color:var(--muted); margin-bottom:4px; }
 </style>
 </head>
 <body>
@@ -77,13 +72,12 @@
         <button id="closeHist" class="mode-btn">Cerrar</button>
       </div>
     </div>
-    <div id="historyContent"></div>
-    <div style="margin-top:10px;color:var(--muted);font-size:13px">Se muestran las lecturas guardadas (últimos 7 días aprox.).</div>
   </div>
 </div>
 
-<script src="https://www.gstatic.com/firebasejs/9.10.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.10.0/firebase-database.js"></script>
+<!-- Firebase compat -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 
 <script>
 const NUM=5, DIST_THRESHOLD_MM=40;
@@ -145,11 +139,12 @@ for(let i=0;i<NUM;i++) createCard(i);
 updateSummary();
 
 /* --- FIREBASE --- */
-const firebaseConfig={ databaseURL:"https://enlace-t-default-rtdb.firebaseio.com/" };
+const firebaseConfig={
+  databaseURL:"https://enlace-t-default-rtdb.firebaseio.com/"
+};
 firebase.initializeApp(firebaseConfig);
 const db=firebase.database();
 
-// --- PRUEBA DE CONEXION ---
 console.log("Iniciando prueba de conexión a Firebase...");
 db.ref("prueba").once("value")
   .then(snap => {
@@ -160,10 +155,11 @@ db.ref("prueba").once("value")
   });
 
 db.ref("prueba").on("value", snap=>{
-  const data=snap.val(); if(!data) return;
+  const data=snap.val();
+  if(!data) return;
   for(let i=0;i<NUM;i++){
     if(!active[i]) continue;
-    const s=data[i]??data; 
+    const s=data; 
     const t=Number(s.Temperatura_C??s.temperatura??0);
     const h=Number(s.Humedad_pct??s.humedad??0);
     const d=Number(s.Distancia_mm??s.distancia_mm??s.distancia??0);
